--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-qr-code": "^2.0.12",
-    "react-use-websocket": "^4.5.0"
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "@types/node": "^20",
